test/lattests/extensions/var/bad/varInCast.lat
int main() {
    var x = (var) null;
    return 0;
}